fairly reproducible canvas-y crashes on https://lab.hakim.se/hypnos/
Categories
(Core :: Graphics: Canvas2D, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox86 | --- | wontfix |
firefox87 | --- | wontfix |
firefox88 | --- | verified |
firefox89 | --- | verified |
People
(Reporter: mayankleoboy1, Assigned: bobowen)
References
Details
Crash Data
Attachments
(2 files)
32.63 KB,
text/plain
|
Details | |
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
- Use my usual latest Nightly profile
- Go to https://lab.hakim.se/hypnos/
- Try to duplicate the tab a couple of times by right click on tab-> Duplicate tab
Do this a couple of times. Then try closing the tabs one by one
AR: Either a "tab turns white" crash, or a silent background crash.
ER : not so
I get a variety of crash signatures. Posting a few.
Reporter | ||
Comment 1•4 years ago
|
||
Reporter | ||
Comment 2•4 years ago
•
|
||
https://crash-stats.mozilla.org/report/index/7c0cadec-f57f-4f64-ab8d-d73e80210318
https://crash-stats.mozilla.org/report/index/07ebec32-c419-4bf3-b5ba-a3d820210318
https://crash-stats.mozilla.org/report/index/929ab342-4856-4796-9fe0-931e70210318
https://crash-stats.mozilla.org/report/index/faeacede-63e5-4df2-af71-3fe640210318
https://crash-stats.mozilla.org/report/index/7a93942f-9fd9-4ed8-89bc-587350210318
https://crash-stats.mozilla.org/report/index/53d00e10-3c8c-4d01-bc92-6844f0210318
https://crash-stats.mozilla.org/report/index/909f77d2-2514-4f3b-9443-baf300210318
Reporter | ||
Updated•4 years ago
|
Reporter | ||
Updated•4 years ago
|
Reporter | ||
Updated•4 years ago
|
Reporter | ||
Updated•4 years ago
|
Assignee | ||
Comment 3•4 years ago
|
||
Hi Mayank, thanks for the bug, would you mind testing with: pref gfx.canvas.remote=false
Reporter | ||
Updated•4 years ago
|
Reporter | ||
Comment 4•4 years ago
|
||
(In reply to Bob Owen (:bobowen) from comment #3)
Hi Mayank, thanks for the bug, would you mind testing with: pref gfx.canvas.remote=false
I do not crash with gfx.canvas.remote=false
Reporter | ||
Comment 5•4 years ago
|
||
NB: these are not new crashes or new regression. I have been reproducing these crashes for atleast a month.
Assignee | ||
Comment 6•4 years ago
|
||
Thanks for the report.
I can also reproduce a crash on my old laptop with only Intel graphics, although the signature is different.
I wonder if we need to be using AutoSerializeWithMoz2D
for uses of the Direct3D and DXGI APIs in the compositor and webrender threads, like we do in the canvas ones.
Essentially nothing has changed with remote canvas with respect to the Direct2D writing calls, except we are now processing the Direct2D calls in the same process.
So, the Direct2D device is in the same process, which might make the difference here.
Assignee | ||
Comment 7•4 years ago
|
||
Assignee | ||
Comment 8•4 years ago
|
||
This should ensure that we are more rigorous about always serializing when
required. For example in this crash it appears the issue is that we are not
using it when destroying the textures still held by the CanvasTranslator on its
destruction. It also means that we can minimize the code that is serialized,
which should reduce contention and possible deadlocks.
This patch also ensures that we drop any other references to the texture's
DrawTarget before dropping the texture, so that it can control the destruction
of its DrawTarget including any locking.
Comment 10•4 years ago
|
||
bugherder |
Assignee | ||
Comment 11•4 years ago
|
||
Comment on attachment 9211574 [details]
Bug 1699533: Push most uses of AutoSerializeWithMoz2D in canvas classes into D3D11TextureData. r=mattwoodrow!
Beta/Release Uplift Approval Request
- User impact if declined: This stops a number of crashes within graphics drivers in the GPU process.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: See description.
- List of other uplifts needed: None
- Risk to taking this patch: Medium
- Why is the change risky/not risky? (and alternatives if risky): This isn't a trivial change, so not putting low.
However, it is mainly making the locking more consistent, i.e. doing what we already do, but covering places we've missed. - String changes made/needed: None
Assignee | ||
Updated•4 years ago
|
Assignee | ||
Updated•4 years ago
|
Comment 12•4 years ago
|
||
Comment on attachment 9211574 [details]
Bug 1699533: Push most uses of AutoSerializeWithMoz2D in canvas classes into D3D11TextureData. r=mattwoodrow!
Approved for 88.0b5.
Comment 13•4 years ago
|
||
bugherder uplift |
Updated•4 years ago
|
Comment 14•4 years ago
|
||
I've managed to reproduce this issue on Windows 10 using Firefox 87.0 using the STR from the description. After duplicating ~20 tabs and closing several of them, the page turned white.
Confirming that with Firefox 88.0b5 (build ID 20210330185720) and latest 89.0a1 Nightly (build ID 20210331215444) I don't see any white page / crash.
Tested on Windows 10x64 and Ubuntu 20.04.
Description
•